# hexapod_control

./: README.md
legged_controllers/: CMakeLists.txt  legged_controllers_plugins.xml  package.xml
legged_controllers/config/: controllers.yaml
legged_controllers/config/elspider_air/: gait.info  reference.info  task.info
legged_controllers/include/legged_controllers/: HexapodController.h  TestController.h
legged_controllers/launch/: load_controller.launch  load_hexcontroller.launch
legged_controllers/src/: HexTargetTrajectoriesPublisher.cpp  HexapodController.cpp  LeggedController.cpp  TestController.cpp
legged_estimation/: CMakeLists.txt  package.xml
legged_estimation/include/legged_estimation/: LinearKalmanFilter.h  StateEstimateBase.h
legged_estimation/src/: LinearKalmanFilter.cpp
legged_examples/legged_hexapod/legged_hexapod_description/: CMakeLists.txt  package.xml
legged_examples/legged_hexapod/legged_hexapod_description/config/: default.yaml
legged_examples/legged_hexapod/legged_hexapod_description/launch/: empty_world.launch
legged_examples/legged_hexapod/legged_hexapod_description/rviz/: default.rviz
legged_examples/legged_hexapod/legged_hexapod_description/urdf/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro  trunk.xacro
legged_examples/legged_hexapod/legged_hexapod_hw/: CMakeLists.txt  package.xml
legged_examples/legged_hexapod/legged_hexapod_hw/config/: elspider_air.yaml
legged_examples/legged_hexapod/legged_hexapod_hw/include/legged_hexapod_hw/: HexapodHW.h
legged_examples/legged_hexapod/legged_hexapod_hw/include/legged_unitree_hw/: HexapodHW.h
legged_examples/legged_hexapod/legged_hexapod_hw/launch/: legged_hexapod_hw.launch
legged_examples/legged_hexapod/legged_hexapod_hw/msg/: JointCmd.msg
legged_examples/legged_hexapod/legged_hexapod_hw/src/: HexapodHW.cpp  legged_hexapod_hw.cpp
legged_examples/legged_unitree/legged_unitree_description/launch/: empty_world.launch
legged_examples/legged_unitree/legged_unitree_hw/launch/: legged_unitree_hw.launch
legged_interface/include/legged_interface/: LeggedInterface.h  LeggedRobotPreComputation.h  SwitchedModelReferenceManager.h
legged_interface/include/legged_interface/constraint/: SwingTrajectoryPlanner.h
legged_interface/include/legged_interface/cost/: LeggedRobotQuadraticTrackingCost.h
legged_interface/src/: LeggedInterface.cpp  LeggedRobotPreComputation.cpp  SwitchedModelReferenceManager.cpp
legged_interface/src/constraint/: SwingTrajectoryPlanner.cpp
legged_reference/: CMakeLists.txt  package.xml
legged_reference/include/legged_reference/common/: Types.h
legged_reference/include/legged_reference/gait/: GaitKeyboardPublisher.h  GaitReceiver.h  GaitSchedule.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
legged_reference/include/legged_reference/visualization/: HexapodRobotVisualizer.h
legged_reference/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp  GaitSchedule.cpp  LeggedRobotGaitCommandNode.cpp  ModeSequenceTemplate.cpp
legged_reference/src/visualization/: HexapodRobotVisualizer.cpp
legged_wbc/: CMakeLists.txt  package.xml
legged_wbc/include/legged_wbc/: WbcBase.h  WeightedWbcSimple.h
legged_wbc/src/: WbcBase.cpp  WeightedWbcSimple.cpp
